# open_dive

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  tract_visualizer.py  wiki-page.md
.github/: pull_request_template.md
src/open_dive/: __init__.py  slant.txt  viz.py
src/open_dive/scripts/: changeover.py  nifti2png.py  run.py
